discussion/kv_engine/176364/176364_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Add BucketQuotaChangeTask to deal with quota changes

The task is created on Bucket creation and snoozed indefinitely.
When a quota change comes in via epctl flush param we wake the task
and have it change the Bucket quota. Currently this change in quota
sets the configuration parameter which updates watermarks and other
related quotas in a configuration listener. This code will be moved
into this task in a future change. In another change we will also
handle decreases in quota in a graceful manner with the goal of
preventing tmp fails as we reduce memory usage.

Change-Id: Ia43dda9fea8eab2547f9fafacf28d911b90c943c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-28 18:59:17.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 19:48:31.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47160/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes.....\kv_engine\engines\ep\tests\ep_testsuite_basic.cc:152 Test failed: `" (Expected `500", got `50" - Incorrect low wat.)
(96 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47160/ )

Timeout of a CTest test 427/427 Test #190: ep-engine_ep_unit_tests.PersistentAndEphemeral/ConnectionTest ...........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47160/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18401/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18401/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18401/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39617/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39617/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8072/ : FAILURE

Compile error at [2022-06-28T19:02:59.926Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8072/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20626/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes...../kv_engine/engines/ep/tests/ep_testsuite_basic.cc:89 Test failed: `" (Expected `1000000", got `1000" - Incorrect new size.)
[2022-06-28T19:11:34.444Z] (264 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20626/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20280/ : FAILURE

Compile error at [2022-06-28T19:14:38.439Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:17:10:
fatal error: libmagma/magma.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20280/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19496/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1467 Test failed: `" (Expected `500000000", got `125829120" - Incorrect new size.)
[2022-06-28T19:25:13.430Z] (346 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19496/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28662/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1488 Test failed: `" (Expected `2000000000", got `500000000" - Incorrect new size.)
[2022-06-28T19:15:26.739Z] (573 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28662/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28662/ )

Test exceeded the timeout:
[2022-06-28T19:15:26.740Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28662/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17550/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8172/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21270/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
